--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "WebSite for Graph Visualisation",
   "main": "index.js",
   "dependencies": {
-    "ngraph.gexf": "0.0.10",
-    "ngraph.graph": "^0.0.15",
-    "ngraph.offline.layout": "^1.1.1",
     "uglify-js": "^3.4.9"
   },
   "devDependencies": {
-    "http-server": "~0.9.0"
+    "http-server": "^0.9.0"
   },
   "scripts": {
     "start": "http-server -p 8000",
