--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "WebSite for Graph Visualisation",
   "main": "index.js",
   "dependencies": {
+    "linter": "0.0.7",
     "uglify-js": "^3.4.9"
   },
   "devDependencies": {
