--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "WebSite for Graph Visualisation",
   "main": "index.js",
   "dependencies": {
+    "d3-brush": "^1.0.6",
     "linter": "0.0.7",
     "uglify-js": "^3.4.9"
   },
@@ -11,7 +12,7 @@
     "http-server": "^0.9.0"
   },
   "scripts": {
-    "start": "http-server -p 8000",
+    "start": "http-server -p 8000 -c-1 -o",
     "test": "standard"
   },
   "repository": {
