--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "http-server": "^0.9.0"
   },
   "scripts": {
-    "start": "http-server -p 8000 -c-1 -o",
+    "start": "http-server -p 8000 -c-1",
     "test": "standard"
   },
   "repository": {
