--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.html",
   "dependencies": {
     "d3-brush": "^1.0.6",
-    "linter": "0.0.7",
+    "jquery": "^3.3.1",
     "uglify-js": "^3.4.9"
   },
   "devDependencies": {
-    "http-server": "^0.9.0"
+    "http-server": "^0.9.0",
+    "husky": "^1.3.1",
+    "prettier": "1.16.4",
+    "pretty-quick": "^1.10.0"
   },
   "scripts": {
     "start": "http-server -p 8000 -c-1",
