--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "d3-brush": "^1.0.6",
     "jquery": "^3.3.1",
     "plotly": "^1.0.6",
+    "spin.js": "^4.0.0",
     "uglify-js": "^3.4.9"
   },
   "devDependencies": {
